--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "bootstrap": "^3.3.7",
     "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-router-dom": "4.1.2"
   },
   "devDependencies": {
-    "react-scripts": "^1.0.10"
+    "react-scripts": "1.0.10"
   },
   "resolutions": {
-    "graceful-fs": "4.2.4"
+    "graceful-fs": "^4.2.4"
   },
    "engines": {
-    "node": "12.20.0"
+    "node": "12.18.3",
+    "npm": "4.6.1"
   }
 }
